<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_splash_screen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".controlador.splash_screen.SplashScreen">

    <ImageView
        android:id="@+id/iv_splash_screen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/ic_logo"
        android:contentDescription="@string/info_iv"/>

    <TextView
        android:id="@+id/tv_nombre_splash_screen"
        android:layout_marginTop="-20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_tv_nombre"
        android:textSize="78sp"
        android:textStyle="bold"
        android:textColor="@color/colorPrimary"/>

    <TextView
        android:id="@+id/tv_slogan_splash_screen"
        android:layout_marginTop="-15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_tv_slogan"
        android:textSize="28sp"
        android:textStyle="italic"
        android:textColor="@color/colorPrimary"/>

</LinearLayout>
