<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBlanco"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:scrollbars="none">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/dialog_body"
        android:paddingTop="@dimen/dialog_body">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_registro_usuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorTextAppearance="@style/ErrorText">

            <EditText
                android:id="@+id/et_registro_usuario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="5dp"
                android:drawableStart="@drawable/ic_usuario_registro"
                android:hint="@string/hint_registro_usuario"
                android:inputType="text"
                android:maxLines="1"
                android:textColor="@color/colorSecondaryText"
                android:textColorHint="@color/colorSecondaryText"
                android:textSize="14sp" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_registro_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorTextAppearance="@style/ErrorText"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/colorPrimary">

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/et_registro_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="5dp"
                android:drawableStart="@drawable/ic_password_registro"
                android:hint="@string/hint_registro_password"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:maxLines="1"
                android:textColor="@color/colorSecondaryText"
                android:textColorHint="@color/colorSecondaryText"
                android:textSize="14sp" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_confirmar_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorTextAppearance="@style/ErrorText"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/colorPrimary">

            <EditText
                android:id="@+id/et_confirmar_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="5dp"
                android:drawableStart="@drawable/ic_password_registro"
                android:hint="@string/hint_registro_confirmar_password"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:maxLines="1"
                android:textColor="@color/colorSecondaryText"
                android:textColorHint="@color/colorSecondaryText"
                android:textSize="14sp" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_registro_nombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorTextAppearance="@style/ErrorText">

            <AutoCompleteTextView
                android:id="@+id/autocomplete_registro_nombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="5dp"
                android:drawableStart="@drawable/ic_edit"
                android:hint="@string/hint_registro_nombres"
                android:inputType="textPersonName"
                android:maxLines="1"
                android:textColor="@color/colorSecondaryText"
                android:textColorHint="@color/colorSecondaryText"
                android:textSize="14sp" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_registro_ap_paterno"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorTextAppearance="@style/ErrorText">

            <AutoCompleteTextView
                android:id="@+id/autocomplete_registro_ap_paterno"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="5dp"
                android:drawableStart="@drawable/ic_edit"
                android:hint="@string/hint_registro_apellido_paterno"
                android:inputType="textPersonName"
                android:maxLines="1"
                android:textColor="@color/colorSecondaryText"
                android:textColorHint="@color/colorSecondaryText"
                android:textSize="14sp"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_registro_ap_materno"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorTextAppearance="@style/ErrorText">

            <AutoCompleteTextView
                android:id="@+id/autocomplete_registro_ap_materno"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="5dp"
                android:drawableStart="@drawable/ic_edit"
                android:hint="@string/hint_registro_ap_materno"
                android:inputType="textPersonName"
                android:maxLines="1"
                android:textColor="@color/colorSecondaryText"
                android:textColorHint="@color/colorSecondaryText"
                android:textSize="14sp" />
        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:id="@+id/ll_fecha_nacimiento"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_fecha_nacimiento"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:errorTextAppearance="@style/ErrorText">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/et_fecha_nacimiento"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawablePadding="5dp"
                    android:drawableStart="@drawable/ic_fecha"
                    android:inputType="text"
                    android:labelFor="@+id/et_fecha_nacimiento"
                    android:text="@string/hint_registro_fecha_de_nacimiento"
                    android:textColor="@color/colorSecondaryText"
                    android:textColorHint="@color/colorSecondaryText"
                    android:textSize="14sp" />

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/btn_agregar_fecha"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/bk_boton_selector"
                android:text="@string/label_btn_registro_agregar_fecha"
                android:textColor="@color/colorBlanco"
                android:textSize="24sp"
                android:textStyle="bold" />

        </LinearLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_registro_correo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorTextAppearance="@style/ErrorText">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/et_registro_correo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="5dp"
                android:drawableStart="@drawable/ic_email"
                android:hint="@string/hint_registro_correo_electronico"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:textColor="@color/colorSecondaryText"
                android:textColorHint="@color/colorSecondaryText"
                android:textSize="14sp" />
        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_registro_telefono"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:counterEnabled="true"
            app:counterMaxLength="10"
            app:errorTextAppearance="@style/ErrorText">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/et_registro_telefono"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:digits="0123456789"
                android:drawablePadding="5dp"
                android:drawableStart="@drawable/ic_telefono"
                android:hint="@string/hint_registro_numero_telefonico"
                android:inputType="phone"
                android:maxLength="10"
                android:maxLines="1"
                android:textColor="@color/colorSecondaryText"
                android:textColorHint="@color/colorSecondaryText"
                android:textSize="14sp" />
        </android.support.design.widget.TextInputLayout>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_resgistro_sexo"
            android:textColor="@color/colorSecondaryText"
            android:textColorHint="@color/colorSecondaryText" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rb_hombre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10sp"
                android:layout_marginStart="10sp"
                android:hint="@string/hint_sexo_hombre"
                android:textColor="@color/colorSecondaryText"
                android:textColorHint="@color/colorSecondaryText"
                android:textSize="14sp" />

            <RadioButton
                android:id="@+id/rb_mujer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10sp"
                android:layout_marginStart="10sp"
                android:hint="@string/hint_sexo_mujer"
                android:textColor="@color/colorSecondaryText"
                android:textColorHint="@color/colorSecondaryText"
                android:textSize="14sp" />

        </LinearLayout>

        <Button
            android:id="@+id/btn_registrar_usuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:background="@drawable/bk_boton_selector"
            android:paddingBottom="@dimen/button_padding"
            android:paddingTop="@dimen/button_padding"
            android:text="@string/label_btn_registro__registrar"
            android:textColor="@color/colorBlanco" />

    </LinearLayout>

</ScrollView>
